home page built

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .title-font {
-	font-family: "comic sans ms";
+	font-family: 'mono';
 	font-size: 32px;
 	line-height: 1.5;
 	font-weight: 800;
