--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,25 @@
 	background-color: #191716;
 }
 
+.nav-font {
+	font-size: 16px;
+	line-height: 1;
+	font-family: monospace;
+	letter-spacing: -1.2px;
+}
+
+.content-font {
+	color: white;
+	font-family: monospace;
+	font-size: 14px;
+}
+
+.dropdown-font {
+	font-size: 16px;
+	line-height: 1.5;
+	font-family: monospace;
+}
+
 .secondary-bg {
 	background-color: #0A0903;
 }
@@ -25,7 +44,7 @@
 }
 
 .title-font {
-	font-family: 'mono';
+	font-family: 'monospace';
 	font-size: 32px;
 	line-height: 1.5;
 	font-weight: 800;
